--- a/CrudJDBC/src/br/com/view/InserirAutomovelGui.form
+++ b/CrudJDBC/src/br/com/view/InserirAutomovelGui.form
@@ -6,6 +6,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -149,7 +150,7 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Inserir Modelo"/>
+            <Property name="text" type="java.lang.String" value="Inserir Autom&#xf3;vel"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
